--- a/page_helper/Cargo.toml
+++ b/page_helper/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "services_statistics"
+name = "page_helper"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2018"
@@ -14,12 +14,9 @@ ink_lang = { version = "3.0.0-rc3", path = "../ink/crates/lang", default-feature
 
 scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
 scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }
-services_market = { version = "0.1.0", path = "../services_market", default-features = false, features = ["ink-as-dependency"] }
-page_helper = { version = "0.1.0", path = "../page_helper", default-features = false, features = ["ink-as-dependency"] }
-
 
 [lib]
-name = "services_statistics"
+name = "page_helper"
 path = "lib.rs"
 crate-type = [
     # Used for normal contract Wasm blobs.
@@ -38,7 +35,5 @@ std = [
     "ink_prelude/std",
     "scale/std",
     "scale-info/std",
-    "services_market/std",
-    "page_helper/std",
 ]
 ink-as-dependency = []
