--- a/services_market/Cargo.toml
+++ b/services_market/Cargo.toml
@@ -14,6 +14,7 @@ ink_lang = { version = "3.0.0-rc3", path = "../ink/crates/lang", default-feature
 
 scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
 scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }
+page_helper = { version = "0.1.0", path = "../page_helper", default-features = false, features = ["ink-as-dependency"] }
 
 [lib]
 name = "services_market"
@@ -35,5 +36,6 @@ std = [
     "ink_prelude/std",
     "scale/std",
     "scale-info/std",
+    "page_helper/std",
 ]
 ink-as-dependency = []
