--- a/services_market/Cargo.toml
+++ b/services_market/Cargo.toml
@@ -2,18 +2,18 @@
 name = "services_market"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-ink_primitives = { version = "3.0.0-rc3", path = "../ink/crates/primitives", default-features = false }
-ink_metadata = { version = "3.0.0-rc3", path = "../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.0.0-rc3", path = "../ink/crates/env", default-features = false }
-ink_prelude = { version = "3.0.0-rc3", path = "../ink/crates/prelude", default-features = false }
-ink_storage = { version = "3.0.0-rc3", path = "../ink/crates/storage", default-features = false }
-ink_lang = { version = "3.0.0-rc3", path = "../ink/crates/lang", default-features = false }
+ink_primitives = { version = "3.0.0-rc6", path = "../ink/crates/primitives", default-features = false }
+ink_metadata = { version = "3.0.0-rc6", path = "../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
+ink_env = { version = "3.0.0-rc6", path = "../ink/crates/env", default-features = false }
+ink_prelude = { version = "3.0.0-rc6", path = "../ink/crates/prelude", default-features = false }
+ink_storage = { version = "3.0.0-rc6", path = "../ink/crates/storage", default-features = false }
+ink_lang = { version = "3.0.0-rc6", path = "../ink/crates/lang", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
-scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "1.0", default-features = false, features = ["derive"], optional = true }
 page_helper = { version = "0.1.0", path = "../page_helper", default-features = false, features = ["ink-as-dependency"] }
 
 [lib]
@@ -39,3 +39,4 @@ std = [
     "page_helper/std",
 ]
 ink-as-dependency = []
+ink-experimental-engine = ["ink_env/ink-experimental-engine"]
